argocd/apps/vs-apps/stacks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stacks
  namespace: vs-apps
  labels:
    app.kubernetes.io/name: stacks
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: stacks
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stacks
    spec:
      serviceAccountName: stacks
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: stacks
          image: "ghcr.io/drewpayment/stacks:latest"
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
