argocd/apps/vs-apps/stacks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stacks
  namespace: vs-apps
  labels:
    app.kubernetes.io/name: stacks
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: stacks
